--- a/Dished/package.json
+++ b/Dished/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.15.5",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-safe-area-view": "github:react-native-community/react-native-safe-area-view",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
