--- a/Dished/package.json
+++ b/Dished/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
